# Resmen64

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  vcpkg.json
.github/workflows/: main.yml
docs/lua/script/: buildSite.py
docs/lua/static/: index-no-min.html  index.html
src/: CMakeLists.txt  Plugins.Common.cmake  api.lua
src/Common/: CMakeLists.txt
src/Common/include/: CommonPCH.h  IOUtils.h  MiscHelpers.h  PlatformService.h  StrUtils.h
src/Core/: CMakeLists.txt  Core.cpp  Core.h  alloc.cpp  cheats.cpp  cheats.h
src/Core/include/: core_api.h  core_plugin.h  core_types.h
src/Core/memory/: dma.cpp  flashram.cpp  memory.cpp  pif.cpp  pif_lut.cpp  savestates.cpp  summercart.cpp  summercart.h  tlb.cpp
src/Core/r4300/: bc.cpp  cop0.cpp  cop1.cpp  cop1_d.cpp  cop1_helpers.cpp  cop1_helpers.h  cop1_l.cpp  cop1_s.cpp  cop1_w.cpp  debugger.cpp  disasm.cpp  exception.cpp  interrupt.cpp  macros.h  pure_interp.cpp  r4300.cpp  r4300.h  recomp.cpp  regimm.cpp  rom.cpp  rom.h  special.cpp  timers.cpp  tracelog.cpp  vcr.cpp  vcr.h
src/Core/r4300/x86/: assemble.cpp  gbc.cpp  gcop0.cpp  gcop1.cpp  gcop1_d.cpp  gcop1_helpers.cpp  gcop1_l.cpp  gcop1_s.cpp  gcop1_w.cpp  gr4300.cpp  gregimm.cpp  gspecial.cpp  gtlb.cpp  regcache.cpp  rjump.cpp
src/Plugins.Audio.Dummy/: CMakeLists.txt  Main.cpp  Main.h
src/Plugins.Input.Dummy/: CMakeLists.txt  Main.cpp  Main.h
src/Plugins.RSP.Dummy/: CMakeLists.txt  Main.cpp  Main.h
src/Plugins.RSP.TAS/: CMakeLists.txt  Config.cpp  JPEG.cpp  Main-New.cpp  Main.cpp  Main.h
src/Plugins.Video.Dummy/: CMakeLists.txt  Main.cpp  Main.h
src/Views.Win32/: ActionManager.cpp  CMakeLists.txt  Config.cpp  DialogService.cpp  Main.cpp  Main.h  Plugin.cpp  Plugin.h  Resource.rc  app.manifest  stdafx.h
src/Views.Win32/components/: AppActions.cpp  Benchmark.cpp  CLI.cpp  Cheats.cpp  Compare.cpp  ConfigDialog.cpp  CoreDbg.cpp  FilePicker.cpp  LuaDialog.cpp  MovieDialog.cpp  PianoRoll.cpp  RomBrowser.cpp  RomBrowser.h  Seeker.cpp  UpdateChecker.cpp
src/Views.Win32/include/Views.Win32/: ViewPlugin.h
src/Views.Win32/lua/: LuaCallbacks.cpp  LuaManager.cpp  LuaRegistry.cpp
src/Views.Win32/lua/modules/: Action.h  Clipboard.h  D2D.h  Emu.h  Global.h  IOHelper.h  Input.h  Movie.h  WGUI.h
test/: CMakeLists.txt
test/Core.Tests/: CMakeLists.txt  stdafx.h  vcr_tests.cpp
test/Lua.TestLib/: CMakeLists.txt  main.cpp
test/lua/: test_prelude.lua  tests.lua
toolchains/: vcpkg-win64.cmake
toolchains/vcpkg-triplets/: x64-windows-static-asan.cmake  x86-windows-static-asan.cmake
